# algo_viz

./: .gitignore  CHANGES_SUMMARY.md  LICENSE  README.md  cli.py  pyproject.toml  test_algoviz.py  test_improved_tracking.py  test_rendering_friendly.py  test_two_pointers.py  verify_rendering.py
algo_viz/: __init__.py  decorators.py
algo_viz/analyzers/: behavior.py  dp.py  events.py
algo_viz/detectors/: dp.py  generic.py  operations.py  pointers.py  recursion.py  sliding_window.py
algo_viz/renderers/: ascii.py  dp_ascii.py  generic.py  html.py  recursion_tree.py  sliding_window.py  two_pointers.py
algo_viz/tracer/: events.py  tracer.py
developer_doc/: DOCUMENTATION_STATUS.md  IMPROVEMENTS.md  README.md  START_HERE.md
developer_doc/architecture/: ARCHITECTURE_DEEP_DIVE.md
developer_doc/getting-started/: QUICK_START.md
developer_doc/reference/: DEVELOPER_COMPLETE.md  DEVELOPER_PACKAGE_SUMMARY.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_INDEX.md
docs/: README.md
docs/project/: CHANGELOG.md  CONTRIBUTING.md
examples/: 104_maxDepthBinaryTree.py  167_two_sum_ii.py  50_fibonacci.py  70_climbingStairs.py  generic_analysis_examples.py  longestSubstringWithoutRepeatedCharacters.py  two_pointers.py
