[project]
name = "algo-viz"
version = "0.1.0"
description = "Visualize algorithm execution to build intuition"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Kamal Nath Tiwari", email = "tiwari.kamal.nath@gmail.com"}
]
keywords = [
    "algorithm", 
    "visualization", 
    "debugging", 
    "learning",
    "dynamic-programming",
    "two-pointers",
    "recursion",
    "sliding-window"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
]

[project.urls]
Homepage = "https://github.com/kamaledge/algo-viz"
Documentation = "https://github.com/kamaledge/algo-viz#readme"
Repository = "https://github.com/kamaledge/algo-viz.git"
Issues = "https://github.com/kamaledge/algo-viz/issues"

[project.scripts]
algoviz = "algo_viz.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
